--- a/public/scss/partials/_components.scss
+++ b/public/scss/partials/_components.scss
@@ -1,5 +1,6 @@
 $ibm-blue: #4178be;
-
+$unit: 8px;
+$subunit: $unit/2;
 * {
     // box-sizing: border-box;
   }
@@ -35,7 +36,7 @@ html, body {
 
 .c-background {
   background: url(../images/hero.png) no-repeat;
-  background-position: 0% 30%;
+  background-position: 47% 32%;
   background-size: cover;
   position: absolute;
   height: 100%;
@@ -68,6 +69,11 @@ body {
 
 p {
   -webkit-font-smoothing: antialiased;
+}
+
+.c-input {
+  max-width: 150px !important;
+  width: 100%;
 }
 
 .c-button {
@@ -182,6 +188,10 @@ p {
   text-decoration: none;
 }
 
+.c-subtext {
+  font-size: 13px;
+}
+
 .c-icon {
   color: #23527c;
 
@@ -209,7 +219,7 @@ p {
   }
 
   &.c--1 {
-    font-size: 32px;
+    font-size: 3rem;
   }
 }
 
@@ -241,6 +251,9 @@ p {
   margin: 16px;
 }
 
+.u-margin-bottom-xs {
+  margin-bottom: $subunit;
+}
 .u-margin-bottom-sm {
   margin-bottom: 8px;
 }
@@ -328,6 +341,10 @@ p {
 
 .u-display-block {
   display: block !important;
+}
+
+.u-display-inline-block {
+  display: inline-block !important;
 }
 
 .u-visually-hidden {
