--- a/public/scss/partials/_overrides.scss
+++ b/public/scss/partials/_overrides.scss
@@ -30,3 +30,12 @@
   max-width: 400px;
 
 }
+
+.ibm-ind-link {
+  padding-bottom: 0 !important;
+}
+
+.ibm-required {
+  left: auto !important;
+  opacity: 1;
+}
